--- a/default.pug
+++ b/default.pug
@@ -4,20 +4,20 @@ html(lang="en_us")
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(name="author" content="Brody Liudzius")
-        meta(name="description" content="Notes for CECS 463 at CSULB")
 
         link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css")
 
         script(type="module" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async id="MathJax-script")
     
     body
-        article
-            h1 CECS 456 Notes
-            hr
-
-            p
-                | Notes from CECS 456 at CSULB with Professor Amir Ghasemkhani, Spring 2024.
-
-            h2 Chapter 3
-            ul
-                li: a(href="/CECS456/Decision_Tree_Induction") Decision Tree Induction
+        header
+            block header
+                a(href="/") Home
+        
+        main
+            block main
+                p This page is just a template. Please navigate back to safety ^
+        
+        footer
+            - year = new Date().getFullYear();
+            center: small Copyright © #{year} Brody Liudzius
