--- a/index.pug
+++ b/index.pug
@@ -1,23 +1,43 @@
-doctype html
-html(lang="en_us")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        meta(name="author" content="Brody Liudzius")
-        meta(name="description" content="Brody Liudzius's GitHub Pages")
+extends /default.pug
 
-        link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css")
+block header
 
-        script(type="module" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async id="MathJax-script")
+block main
+    h1 Brody Liudzius's Notes
+    hr
+
+    p
+        | Welcome to my GitHub Pages site! I'm a student at Cal State Long Beach studying Computer Engineering.
+        | This is just a temporary site where I can post my notes in a readable, digital form.
+        | Feel free to use or share any resources you find here while they last.
+        | I'm working on replacing this with a more refined personal site, but due to schoolwork, that won't exist for a while.
     
-    body
-        article
-            h1 Brody Liudzius's GitHub Pages
-            hr
-
-            p
-                | Currently this is just a temporary site where I can post my class notes.
+    hr
+    section
+        h2 School Notes
+        p
+            | These are notes I've typed from my courses here at CSULB.
+            | They are intended to be written in an organized, concise, Wikipedia-inspired style.
+            | I'm also working on typing up some of my old paper notes from before Spring 2024 and adding them as pages.
             
-            h2 Spring 2024
+        section
+            h3 Spring 2024
             ul
-                li: a(href="/CECS463.html") CECS 463
+                li: a(href="/CECS_456") CECS 456 - Machine Learning
+            
+            h3 Fall 2023
+            ul
+
+            h3 Spring 2023
+            ul
+
+            h3 Fall 2022
+            ul
+                li: a(href="/CECS_229") CECS 229 - Discrete Structures II
+    hr
+    section
+        h2 Personal Notes
+        ul
+            li: a(href="/Computer_Science") Computer Science & Computer Engineering
+            li: a(href="/Electronics") Electronics
+            li: a(href="/Math") Math
