Minor text changes

--- a/CECS_229/index.pug
+++ b/CECS_229/index.pug
@@ -4,12 +4,14 @@ block main
     h1 CECS 229 - Discrete Structures II
     hr
 
-    p
-        | Notes from CECS 229 at CSULB with Dr. Mahshid Fardadi, Fall 2022.
+    p Notes from CECS 229 at CSULB with #[a(href="https://www.linkedin.com/in/mahshid-fardadi/") Dr. Mahshid Fardadi], Fall 2022.
+    p This page is still under construction.
 
     h2 Modular Arithmetic
     ul
-        li: a(href="/CECS_456/Decision_Tree_Induction.html") Decision Tree Induction
+        
     h2 Matrix Arithmetic
     ul
+
     h2 Spaces and Subspaces
+    ul
