--- a/CECS_456/index.pug
+++ b/CECS_456/index.pug
@@ -5,8 +5,8 @@ block main
     hr
 
     p
-        | Notes from CECS 456 at CSULB with Dr. Amir Ghasemkhani, Spring 2024.
+        | Notes from CECS 456 at CSULB with #[a(href="https://www.linkedin.com/in/amir-ghasemkhani-6116a666/") Dr. Amir Ghasemkhani], Spring 2024.
 
     h2 Chapter 3
     ul
-        li: a(href="/CECS_456/Chapter_3/Decision_Tree_Induction.html") Decision Tree Induction
+        li: a(href="/CECS_456/Chapter_3/Decision_Tree_Induction") Decision Tree Induction
