--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ block main
     hr
 
     p
-        | Welcome to my GitHub Pages site! I'm a student at Cal State Long Beach studying Computer Engineering.
+        | Welcome to my GitHub Pages site! I'm an undergrad student at Cal State Long Beach studying Computer Engineering.
         | This is just a temporary site where I can post my notes in a readable, digital form.
         | Feel free to use or share any resources you find here while they last.
         | I'm working on replacing this with a more refined personal site, but due to schoolwork, that won't exist for a while.
@@ -24,6 +24,7 @@ block main
             h3 Spring 2024
             ul
                 li: a(href="/CECS_456") CECS 456 - Machine Learning
+                li: a(href="/CECS_463") CECS 463 - Digital Signal Processing
             
             h3 Fall 2023
             ul
@@ -34,6 +35,7 @@ block main
             h3 Fall 2022
             ul
                 li: a(href="/CECS_229") CECS 229 - Discrete Structures II
+                li: a(href="/CECS_271") CECS 271 - Numerical Methods
     hr
     section
         h2 Personal Notes
