--- a/CECS_456/index.pug
+++ b/CECS_456/index.pug
@@ -1,5 +1,8 @@
 extends /default.pug
 
+block title
+    title CECS 456
+
 block main
     h1 CECS 456 - Machine Learning
     hr
@@ -9,4 +12,4 @@ block main
 
     h2 Chapter 3
     ul
-        li: a(href="/CECS_456/Chapter_3/Decision_Tree_Induction") Decision Tree Induction
+        li: a(href="./Chapter_3/Decision_Tree_Induction") Decision Tree Induction
