--- a/index.pug
+++ b/index.pug
@@ -1,5 +1,8 @@
 extends /default.pug
 
+block title
+    title Notes
+
 block header
 
 block main
@@ -10,14 +13,15 @@ block main
         | Welcome to my GitHub Pages site! I'm an undergrad student at Cal State Long Beach studying Computer Engineering.
         | This is just a temporary site where I can post my notes in a readable, digital form.
         | Feel free to use or share any resources you find here while they last.
-        | I'm working on replacing this with a more refined personal site, but due to schoolwork, that won't exist for a while.
+        | I'm working on replacing this with a more complete and polished personal site, but due to schoolwork, that won't be finished for a little while.
+    p
+        | I try to write my notes in an organized, concise, Wikipedia-inspired style. Hopefully things are easy to find. I'll add a search feature in the near future.
     
     hr
     section
         h2 School Notes
         p
             | These are notes I've typed from my courses here at CSULB.
-            | They are intended to be written in an organized, concise, Wikipedia-inspired style.
             | I'm also working on typing up some of my old paper notes from before Spring 2024 and adding them as pages.
             
         section
