--- a/CECS_463/index.pug
+++ b/CECS_463/index.pug
@@ -1,5 +1,8 @@
 extends /default.pug
 
+block title
+    title CECS 463
+
 block main
     h1 CECS 463 - Digital Signal Processing
     hr
@@ -7,6 +10,10 @@ block main
     p
         | Notes from CECS 463 at CSULB with #[a(href="https://www.linkedin.com/in/amehrnia/") Dr. Alireza Mehrnia], Spring 2024.
 
+    h2 Introductory Material & Review
+    ul
+        li: a(href="./Chapter_2/Complex_Numbers") Complex Numbers
+    
     h2 Chapter 2
     ul
-        li: a(href="/CECS_456/Chapter_2/Sinusoids") Sinusoids
+        li: a(href="./Chapter_2/Sinusoids") Sinusoids
