--- a/default.pug
+++ b/default.pug
@@ -10,11 +10,14 @@ mixin tableOfContents()
 
 html(lang="en_us")
     head
+        block title
+
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(name="author" content="Brody Liudzius")
 
         link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css")
+        link(rel="shortcut icon" type="image/x-icon" href="/notes.png")
 
         script(type="module" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async id="MathJax-script")
     
