Update repo with recent notes

--- a/CECS_271/index.pug
+++ b/CECS_271/index.pug
@@ -9,6 +9,7 @@ block main
 
     p
         | Notes from CECS 271 at CSULB with #[a(href="https://www.linkedin.com/in/minhthong-nguyen-86665b42/") Professor Minhthong Nguyen], Fall 2022.
+    //- #toDo: Populate 271 folder with notes
 
     h2 Chapter 2
     ul
