--- a/index.pug
+++ b/index.pug
@@ -10,23 +10,27 @@ block main
     hr
 
     p
-        | Welcome to my GitHub Pages site! I'm an undergrad student at Cal State Long Beach studying Computer Engineering.
+        | I'm an undergrad student at Cal State Long Beach studying Computer Engineering.
         | This is just a temporary site where I can post my notes in a readable, digital form.
-        | Feel free to use or share any resources you find here while they last.
-        | I'm working on replacing this with a more complete and polished personal site, but due to schoolwork, that won't be finished for a little while.
+        | Everything here is under construction!
+        | You may stumble accross notes that aren't fully written yet!
     p
-        | I try to write my notes in an organized, concise, Wikipedia-inspired style. Hopefully things are easy to find. I'll add a search feature in the near future.
+        | Feel free to use or share any resources you find here.
+        | I try to write my notes in an organized, concise, Wikipedia-inspired style.
+        | I'm working on replacing this with a more polished personal site, but due to schoolwork, that won't be finished for a little while.
     
     hr
     section
         h2 School Notes
         p
-            | These are notes I've typed from my courses here at CSULB.
+            | These are notes I've typed from my courses at CSULB.
             | I'm also working on typing up some of my old paper notes from before Spring 2024 and adding them as pages.
             
         section
             h3 Spring 2024
             ul
+                li: a(href="/CECS_326") CECS 326 - Operating Systems
+                li: a(href="/CECS_347") CECS 347 - Embedded Systems II
                 li: a(href="/CECS_456") CECS 456 - Machine Learning
                 li: a(href="/CECS_463") CECS 463 - Digital Signal Processing
             
@@ -47,3 +51,9 @@ block main
             li: a(href="/Computer_Science") Computer Science & Computer Engineering
             li: a(href="/Electronics") Electronics
             li: a(href="/Math") Math
+    
+    hr
+    section
+        h2 CSULB Resources
+        ul
+            li: a(href="/CSULB_Resources/Dining_Hall_Menus") Dining Hall Menus
