--- a/CECS_229/index.pug
+++ b/CECS_229/index.pug
@@ -9,6 +9,7 @@ block main
 
     p Notes from CECS 229 at CSULB with #[a(href="https://www.linkedin.com/in/mahshid-fardadi/") Dr. Mahshid Fardadi], Fall 2022.
     p This page is still under construction.
+    //- #toDo: Populate 229 folder with notes
 
     h2 Modular Arithmetic
     ul
