--- a/default.pug
+++ b/default.pug
@@ -12,14 +12,22 @@ html(lang="en_us")
     head
         block title
 
-        meta(charset="UTF-8")
-        meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        meta(name="author" content="Brody Liudzius")
+        block meta
+            meta(charset="UTF-8")
+            meta(name="viewport" content="width=device-width, initial-scale=1.0")
+            meta(name="author" content="Brody Liudzius")
 
-        link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css")
-        link(rel="shortcut icon" type="image/x-icon" href="/notes.png")
+        block stylesheets
+            link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css")
+            link(rel="shortcut icon" type="image/x-icon" href="/notes.png")
+            link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css")
 
-        script(type="module" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async id="MathJax-script")
+
+
+        block scripts
+            script(type="module" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async id="MathJax-script")
+            script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js")
+            script hljs.highlightAll()
     
     body
         header
