Replaced Tiva documentation with TI links

--- a/CECS_347/index.pug
+++ b/CECS_347/index.pug
@@ -16,8 +16,8 @@ block main
 
     h2 Microcontroller Documentation
     ul
-        li: a(href="./Documentation/TM4C123_DataSheet.pdf") TM4C123 Datasheet
-        li: a(href="./Documentation/Tiva™ C Series TM4C123G LaunchPad User's Guide.pdf") Tiva C Series TM4C123G Launchpad User Guide
+        li: a(href="https://www.ti.com/lit/ds/symlink/tm4c123gh6pm.pdf") TM4C123 Datasheet
+        li: a(href="https://www.ti.com/lit/ug/spmu296/spmu296.pdf?ts=1709488439453") Tiva C Series TM4C123G Launchpad User Guide
     
     hr
 
