--- a/CECS_463/index.pug
+++ b/CECS_463/index.pug
@@ -12,8 +12,9 @@ block main
 
     h2 Introductory Material & Review
     ul
-        li: a(href="./Chapter_2/Complex_Numbers") Complex Numbers
+        li: a(href="./Complex_Numbers") Complex Numbers
     
     h2 Chapter 2
     ul
-        li: a(href="./Chapter_2/Sinusoids") Sinusoids
+        li: a(href="./Sinusoids") Sinusoids
+        li: a(href="./Phasors") Phasors
