--- a/lecture.pug
+++ b/lecture.pug
@@ -9,7 +9,7 @@ p
     | - Temporal requirements
     | - Scalability
     |
-    | Predictive runctime verification of cyber-physcial system:
+    | Predictive runtime verification of cyber-physcial system:
     | - Monitor the system while it is running, alert before the error happens
     | - How to do this without Markov assumption and without parametric model
     | 
